<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical" >

		<ImageView
			android:id="@+id/about_info_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher" />

		<TextView
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:text="@string/app_name" />

		<TextView
			android:id="@+id/about_info_version"
			style="@style/AboutText"
			android:text="@string/about_info_version" />

		<TextView
			android:id="@+id/about_info_author"
			style="@style/AboutText"
			android:text="@string/about_info_author" />

		<TextView
			android:id="@+id/about_info_homepage"
			style="@style/AboutText"
			android:text="@string/about_info_homepage" />

		<TextView
			android:id="@+id/about_info_extra"
			style="@style/AboutText"
			android:text="@string/about_info_extra" />

		<TextView
			android:id="@+id/about_info_questions"
			style="@style/AboutText"
			android:text="@string/about_info_questions" />

		<TextView
			android:id="@+id/about_info_thanks"
			style="@style/AboutText"
			android:text="@string/about_info_thanks" />
	</LinearLayout>

</ScrollView>