<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/tiledMap_menu_share"
		android:icon="@drawable/ic_action_share"
		android:showAsAction="ifRoom|withText"
		android:title="@string/tiledMap_menu_share"/>
	<item
		android:id="@+id/tiledMap_menu_save"
		android:icon="@drawable/ic_action_save"
		android:showAsAction="ifRoom|withText"
		android:title="@string/tiledMap_menu_save"/>
	<item
		android:id="@+id/tiledMap_menu_rename"
		android:icon="@drawable/ic_action_edit"
		android:showAsAction="ifRoom|withText"
		android:title="@string/tiledMap_menu_rename"/>
	<item
		android:id="@+id/global_menu_settings"
		android:icon="@drawable/ic_action_settings"
		android:showAsAction="ifRoom|withText"
		android:title="@string/global_menu_settings"/>
	<item
		android:id="@+id/global_menu_info"
		android:icon="@drawable/ic_action_about"
		android:showAsAction="never"
		android:title="@string/global_menu_info"/>

</menu>